--- a/src/components/Navbar/style/Navbar.scss
+++ b/src/components/Navbar/style/Navbar.scss
@@ -6,113 +6,206 @@ $white-color: #fff;
 // Font variables
 $main-font: "DM Sans", sans-serif;
 
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 90%;
-  margin: 30px auto;
-
-  .logo {
+.navbar {
+  header {
     display: flex;
     align-items: center;
-    column-gap: 5px;
+    justify-content: space-between;
+    width: 90%;
+    margin: 30px auto;
 
-    h3 {
-      color: $primary-color;
-      font-family: $main-font;
-      font-size: 24px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 150%; /* 36px */
-    }
-  }
+    .logo {
+      display: flex;
+      align-items: center;
+      column-gap: 5px;
 
-  nav {
-    display: flex;
-    align-items: center;
-    column-gap: 50px;
-
-    a {
-      color: $primary-color;
-      text-decoration: none;
-      font-family: $main-font;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 150%;
-      transition: all 0.2s ease-in-out;
-
-      &:hover,
-      .active {
-        color: $secondary-color;
+      h3 {
+        color: $primary-color;
+        font-family: $main-font;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 150%; /* 36px */
       }
     }
-  }
 
-  .right_nav {
-    display: flex;
-    align-items: center;
-    column-gap: 10px;
+    nav {
+      display: flex;
+      align-items: center;
+      column-gap: 50px;
 
-    button {
-      color: $primary-color;
-      font-family: $main-font;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 150%;
-      outline-color: transparent;
-      transition: all 0.2s ease-in-out;
-      padding: 10px 30px;
-      cursor: pointer;
-    }
+      a {
+        color: $primary-color;
+        text-decoration: none;
+        font-family: $main-font;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        transition: all 0.2s ease-in-out;
 
-    .login {
-      border-radius: 6px;
-      border: 1px solid rgba(20, 20, 20, 0.1);
-      background: $white-color;
-      box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.03);
-    }
-    .register-as-artisan {
-      border-radius: 4px;
-      color: $white-color;
-      background: $secondary-color;
-      border: transparent;
-      transition: all 0.2s ease-in-out;
-
-      &:hover {
-        background-color: $primary-color;
+        &:hover,
+        .active {
+          color: $secondary-color;
+        }
       }
+    }
+
+    .right_nav {
+      display: flex;
+      align-items: center;
+      column-gap: 10px;
+
+      button {
+        color: $primary-color;
+        font-family: $main-font;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%;
+        outline-color: transparent;
+        transition: all 0.2s ease-in-out;
+        padding: 10px 30px;
+        cursor: pointer;
+      }
+
+      .login {
+        border-radius: 6px;
+        border: 1px solid rgba(20, 20, 20, 0.1);
+        background: $white-color;
+        box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.03);
+      }
+      .register-as-artisan {
+        border-radius: 4px;
+        color: $white-color;
+        background: $secondary-color;
+        border: transparent;
+        transition: all 0.2s ease-in-out;
+
+        &:hover {
+          background-color: $primary-color;
+        }
+      }
+    }
+    .mobile-right {
+      display: none;
     }
   }
 }
 
 // Responsiveness starts here
 @media (max-width: 1114px) {
-  header {
-    .logo {
-      h3 {
-        font-size: 15px;
+  .navbar {
+    header {
+      .logo {
+        h3 {
+          font-size: 15px;
+        }
       }
-    }
-    nav {
-      column-gap: 20px;
+      nav {
+        column-gap: 20px;
 
-      a {
-        font-size: 14px;
+        a {
+          font-size: 14px;
+        }
       }
-    }
-    .right_nav {
-      button {
-        font-size: 14px;
+      .right_nav {
+        button {
+          font-size: 14px;
+        }
       }
     }
   }
 }
 
-
 /* Medium Screens */
 @media (max-width: 991px) {
-  
+  .navbar {
+    header {
+      margin: 20px auto;
+
+      .logo {
+        img {
+          width: 43.923px;
+          height: 30px;
+        }
+      }
+      nav {
+        display: none;
+      }
+      .right_nav {
+        display: none;
+      }
+      .mobile-right {
+        display: flex;
+        align-items: center;
+        column-gap: 10px;
+
+        .mobile-register-artisan {
+          display: flex;
+          align-items: center;
+          column-gap: 5px;
+          background-color: $secondary-color;
+          padding: 10px 20px;
+          border-radius: 23.125px;
+
+          .plus-icon {
+            color: $white-color;
+          }
+
+          h4 {
+            text-decoration: none;
+            color: $white-color;
+            font-family: $main-font;
+            font-size: 15px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+          }
+        }
+        .menu{
+          .close-menu{
+            font-size: 22px;
+          }
+        }
+      }
+    }
+    .mobile-nav{
+      display: flex;
+      flex-direction: column;
+      row-gap: 30px;
+      width: 100%;
+      padding: 30px 20px;
+      position: absolute;
+      background-color: $white-color;
+      transition: all 1s ease-in-out;
+      box-shadow: 0px -10px 15px -5px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      z-index: 100;
+
+      a{
+        color: $primary-color;
+        text-decoration: none;
+        font-family: $main-font;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%;
+        transition: all 0.2s ease-in-out;
+      }
+      button{
+        color: $primary-color;
+        font-family: $main-font;
+        background-color: $white-color;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%;
+        outline-color: transparent;
+        transition: all 0.2s ease-in-out;
+        padding: 5px 30px;
+        cursor: pointer;
+      }
+    }
+  }
 }
