feat: how it works updated

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,8 @@
   scroll-behavior: smooth;
   text-decoration: none;
 }
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Set the color of the scrollbar handle */
+  border-radius: 6px; /* Set the border radius of the scrollbar handle */
+}
