--- a/src/pages/Home/components/MeetArtisans/style/MeetArtisans.scss
+++ b/src/pages/Home/components/MeetArtisans/style/MeetArtisans.scss
@@ -1,32 +1,110 @@
 @import "../../../../../components/Navbar/style/Navbar.scss";
 
 .meet-artisans {
-  width: 90%;
-  margin: 100px auto;
+  width: 100%;
+  margin: 0 auto;
+  background-image: url(../images/MeetArtisans.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: fit-content;
+  .inner-meet-artisans {
+    width: 90%;
+    margin: 100px auto;
+    .meet-artisans-header {
+      display: flex;
+      flex-direction: column;
+      width: 90%;
+      margin: 0 auto;
+      row-gap: 5px;
+      text-align: center;
+      margin-bottom: 80px;
 
-  .meet-artisans-header {
-    display: flex;
-    flex-direction: column;
-    row-gap: 5px;
-    text-align: center;
+      h1 {
+        color: $primary-color;
+        overflow: hidden;
+        font-family: $main-font;
+        font-size: 45px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 48px; /* 106.667% */
+      }
 
-    h1 {
-      color: $primary-color;
-      overflow: hidden;
-      font-family: $main-font;
-      font-size: 45px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 48px; /* 106.667% */
+      h4 {
+        color: var(--gray-scale-700, #464d61);
+        font-family: $main-font;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px; /* 150% */
+      }
     }
 
-    h4 {
-      color: var(--gray-scale-700, #464d61);
-      font-family: $main-font;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 24px; /* 150% */
+    .meet-artisans-body {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 323px);
+      justify-content: center;
+      width: 90%;
+      margin: 0 auto;
+      gap: 20px;
+
+      .artisan-card {
+        display: flex;
+        flex-direction: column;
+        width: 323px;
+
+        .artisan-info {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          background: var(--Light-green-background, #eff6f3);
+          padding: 20px 30px;
+
+          .left-artisan-info {
+            h4 {
+              color: $primary-color;
+              font-family: $main-font;
+              font-size: 20px;
+              font-style: normal;
+              overflow: hidden;
+              font-weight: 400;
+              line-height: 22px; /* 110% */
+            }
+            p {
+              color: rgba(20, 20, 20, 0.7);
+              font-family: $main-font;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: normal;
+              margin-top: 5px;
+            }
+          }
+
+          .right-artisan-info {
+            img {
+              width: 24px;
+              height: 24px;
+              cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+// Responsiveness starts here
+@media (max-width: 1024px) {
+  .meet-artisans {
+    .inner-meet-artisans {
+      .meet-artisans-body {
+        grid-template-columns: repeat(auto-fit, 250px);
+        width: 100%;
+
+        .artisan-card {
+          width: 250px;
+        }
+      }
     }
   }
 }
@@ -34,21 +112,55 @@
 // Responsiveness starts here
 @media screen and (max-width: 640px) {
   .meet-artisans {
-    margin: 50px auto;
+    .inner-meet-artisans {
+      margin: 50px auto;
+      width: 100%;
 
-    .meet-artisans-header {
-      text-align: left;
-      row-gap: 0;
+      .meet-artisans-header {
+        text-align: left;
+        row-gap: 0;
+        margin-bottom: 30px;
 
-      h1 {
-        font-size: 32px;
-        font-weight: 700;
-        line-height: 150%;
+        h1 {
+          font-size: 32px;
+          font-weight: 700;
+          line-height: 150%;
+        }
+
+        h4 {
+          font-size: 13px;
+          line-height: 24px;
+        }
       }
 
-      h4 {
-        font-size: 13px;
-        line-height: 24px;
+      .meet-artisans-body {
+        grid-template-columns: repeat(auto-fit, 168px);
+        width: 100%;
+
+        .artisan-card {
+          width: 168px;
+
+          .artisan-info {
+            padding: 10px 20px;
+
+            .left-artisan-info {
+              h4 {
+                font-size: 13px;
+                line-height: 11.424px;
+              }
+              p {
+                font-size: 10px;
+                line-height: normal;
+                margin-top: 0;
+              }
+            }
+
+            .right-artisan-info {
+              width: 12px;
+              height: 12px;
+            }
+          }
+        }
       }
     }
   }
