fix: like image updated

--- a/src/pages/Home/components/MeetArtisans/style/MeetArtisans.scss
+++ b/src/pages/Home/components/MeetArtisans/style/MeetArtisans.scss
@@ -156,8 +156,10 @@
             }
 
             .right-artisan-info {
-              width: 12px;
-              height: 12px;
+              img {
+                width: 12px;
+                height: 12px;
+              }
             }
           }
         }
