feat: find-artisan-header updated

--- a/src/pages/Home/components/Hero/style/Hero.scss
+++ b/src/pages/Home/components/Hero/style/Hero.scss
@@ -118,7 +118,10 @@
     .left-hero {
       .hero-search {
         .search-box {
-          width: 65%;
+          width: 70%;
+        }
+        button{
+          padding: 17px 35px;
         }
       }
     }
