--- a/src/pages/FindArtisan/components/FindArtisanHeader/style/FindArtisanHeader.scss
+++ b/src/pages/FindArtisan/components/FindArtisanHeader/style/FindArtisanHeader.scss
@@ -7,6 +7,12 @@
     align-items: center;
 
     .left-find-artisan-header {
+      display: flex;
+      align-items: center;
+      column-gap: 10px;
+      .menu {
+        display: none;
+      }
       .logo {
         display: flex;
         align-items: center;
@@ -52,14 +58,8 @@
     background: #fafafa;
     box-shadow: 0px 1px 119px 6px rgba(4, 14, 9, 0.16);
 
-    .close-user-modal-mobile{
-        display: none;
-        // color: rgba(20, 20, 20, 0.7);
-        // font-family: $main-font;
-        // font-size: 16px;
-        // display: flex;
-        // margin-left: 20vw;
-        // margin-bottom: 10px;
+    .close-user-modal-mobile {
+      display: none;
     }
 
     .user-modal-header {
@@ -82,20 +82,140 @@
       }
     }
 
-    .log-out{
-        margin-top: 20px;
-        button{
-            display: flex;
-            align-items: center;
-            column-gap: 10px;
-            outline-color: transparent;
-            background-color: transparent;
-            cursor: pointer;
-            border: 1px solid rgba(20, 20, 20, 0.7);
-            border-radius: 25px;
-            padding: 12px 30px;
+    .log-out {
+      margin-top: 20px;
+      button {
+        display: flex;
+        align-items: center;
+        column-gap: 10px;
+        outline-color: transparent;
+        background-color: transparent;
+        cursor: pointer;
+        border: 1px solid $white-color;
+        border-radius: 25px;
+        padding: 12px;
+        transition: all 0.2s ease-in;
+
+        h4 {
+          color: rgba(20, 20, 20, 0.7);
+          font-family: DM Sans;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 20.266px; /* 126.661% */
         }
+
+        &:hover {
+          border: 1.5px solid #a52a2a;
+          padding: 12px 20px;
+        }
+
+        &:hover h4 {
+          color: #a52a2a;
+        }
+      }
     }
   }
+}
 
+// Responsiveness starts here
+@media (max-width: 1280px) {
+  .find-artisan-container {
+    .artisan-header-modal {
+      right: 60px;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .find-artisan-container {
+    .artisan-header-modal {
+      top: 20vh;
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  .find-artisan-container {
+    .find-artisan-header {
+      .left-find-artisan-header {
+        .menu {
+          display: block;
+        }
+        .logo {
+          column-gap: 10px;
+          align-items: end;
+          img {
+            width: 43.923px;
+            height: 30px;
+          }
+          h1 {
+            font-size: 15px;
+            line-height: normal;
+          }
+        }
+      }
+      .right-find-artisan-header {
+        .avatar {
+          width: 41px;
+          height: 41px;
+        }
+        .drop-down {
+          width: 12px;
+          height: 12px;
+          cursor: pointer;
+        }
+      }
+    }
+    .artisan-header-modal {
+      top: 9vh;
+      right: 45px;
+
+      .close-user-modal-mobile {
+        display: flex;
+        color: rgba(20, 20, 20, 0.7);
+        font-family: $main-font;
+        font-size: 16px;
+        margin-left: 98%;
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+
+/* Small Screens */
+@media screen and (max-width: 640px) {
+  .find-artisan-container {
+    .artisan-header-modal {
+      width: 260px;
+      top: 13vh;
+      right: 20px;
+      padding: 20px;
+
+      .close-user-modal-mobile {
+        margin-left: 95%;
+      }
+
+      .user-modal-header {
+        img {
+          width: 40px;
+          height: 40px;
+        }
+        h4{
+          font-size: 15px;
+          line-height: 16.213px;
+        }
+      }
+
+      .log-out{
+        margin-top: 10px;
+        button{
+          h4{
+            font-size: 13px;
+            line-height: 16.213px;
+          }
+        }
+      }
+    }
+  }
 }
