feat: find artisan header updated

--- a/src/pages/FindArtisan/components/FindArtisanHeader/style/FindArtisanHeader.scss
+++ b/src/pages/FindArtisan/components/FindArtisanHeader/style/FindArtisanHeader.scss
@@ -1,6 +1,7 @@
 @import "../../../../../components//Navbar/style/Navbar.scss";
 
 .find-artisan-container {
+  margin-bottom: 25px;
   .find-artisan-header {
     display: flex;
     justify-content: space-between;
