feat: email me component updated

--- a/src/pages/FindArtisan/components/FindArtisanContent/components/Filter/style/Filter.scss
+++ b/src/pages/FindArtisan/components/FindArtisanContent/components/Filter/style/Filter.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   row-gap: 20px;
   padding: 30px;
+  height: fit-content;
   border-radius: 8px;
   border: 1px solid rgba(20, 20, 20, 0.05);
   background: #fff;
