feat: find artisan page complete

--- a/src/pages/FindArtisan/components/FindArtisanContent/components/Filter/style/Filter.scss
+++ b/src/pages/FindArtisan/components/FindArtisanContent/components/Filter/style/Filter.scss
@@ -78,3 +78,17 @@
     }
   }
 }
+
+
+@media (max-width: 1024px) {
+  .filter{
+    padding: 20px;
+  }
+}
+
+/* Medium Screens */
+@media (max-width: 991px) {
+  .filter{
+    display: none;
+  }
+}
