--- a/src/pages/FindArtisan/components/FindArtisanContent/components/EmailMe/style/EmailMe.scss
+++ b/src/pages/FindArtisan/components/FindArtisanContent/components/EmailMe/style/EmailMe.scss
@@ -51,6 +51,10 @@
       font-weight: 400;
       line-height: 150%; /* 24px */
       padding: 10px;
+      border-radius: 4px;
+      border: 1px solid rgba(20, 20, 20, 0.2);
+      background: #fff;
+      box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.03);
       outline-color: transparent;
     }
 
@@ -67,6 +71,39 @@
       outline-color: transparent;
       border-radius: 4px;
       background: #10be65;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .email-me {
+    padding: 20px;
+    .email-me-header {
+      column-gap: 10px;
+
+      h4 {
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+/* Small Screens */
+@media screen and (max-width: 640px) {
+  .email-me {
+    padding: 10px 15px;
+    row-gap: 10px;
+
+    p {
+      font-size: 13px;
+    }
+    .submit-email{
+      input{
+        font-size: 13px;
+      }
+      button{
+        font-size: 13px;
+      }
     }
   }
 }
