--- a/src/pages/FindArtisan/components/FindArtisanContent/components/Jobs/style/Jobs.scss
+++ b/src/pages/FindArtisan/components/FindArtisanContent/components/Jobs/style/Jobs.scss
@@ -68,6 +68,7 @@
       background: #fff;
       box-shadow: 0px 1px 2px 0px rgba(16, 190, 101, 0.03);
       padding: 20px;
+      transition: all 0.3s ease-in;
 
       .left-artisan-job-card {
         min-width: 12%;
@@ -82,6 +83,7 @@
 
       .right-artisan-job-card {
         width: max-content;
+
         .artisan-role {
           display: flex;
           flex-direction: column;
@@ -136,6 +138,10 @@
             overflow: hidden;
           }
         }
+      }
+
+      &:hover{
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
       }
     }
   }
