feat: artisan profile header updated

--- a/src/pages/ArtisanProfile/style/ArtisanProfile.scss
+++ b/src/pages/ArtisanProfile/style/ArtisanProfile.scss
@@ -19,3 +19,18 @@
     }
   }
 }
+
+/* Small Screens */
+@media screen and (max-width: 640px) {
+  .artisan-profile {
+    .artisan-profile-nav {
+      img {
+        width: 12px;
+        height: 12px;
+      }
+      h4 {
+        font-size: 15px;
+      }
+    }
+  }
+}
