--- a/src/pages/RegisterArtisan/style/RegisterArtisan.scss
+++ b/src/pages/RegisterArtisan/style/RegisterArtisan.scss
@@ -1,4 +1,4 @@
-.sign-up-with-email {
+.register-artisan {
   background-image: url(../images/background.svg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -18,7 +18,7 @@
     padding: 50px;
     margin: 0 auto;
 
-    .with-email-header {
+    .register-artisan-header {
       text-align: center;
 
       h1 {
@@ -31,19 +31,20 @@
       }
     }
 
-    .with-email-form {
+    .register-artisan-form {
       display: flex;
-      row-gap: 20px;
       flex-direction: column;
+      row-gap: 20px;
       margin-top: 30px;
 
-      .with-email-input {
+      .register-artisan-input {
         display: flex;
         flex-direction: column;
         row-gap: 10px;
 
         label {
           display: flex;
+          align-items: center;
           justify-content: space-between;
           color: #666;
           font-family: DM Sans;
@@ -72,6 +73,7 @@
         input {
           border-radius: 12px;
           border: 1px solid rgba(20, 20, 20, 0.2);
+          outline-color: rgba(20, 20, 20, 0.2);
           padding: 15px 20px;
           color: #666;
           font-family: DM Sans;
@@ -79,34 +81,37 @@
           font-style: normal;
           font-weight: 400;
           line-height: normal;
-          outline-color: rgba(20, 20, 20, 0.2);
         }
       }
     }
-    .sign-up-button {
-      width: 100%;
+
+    .register-artisan-button {
       margin-top: 50px;
-      border-radius: 32px;
-      opacity: 0.25;
-      background: #10be65;
-      color: #fff;
-      text-align: center;
-      font-family: DM Sans;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-      cursor: pointer;
-      border: transparent;
-      outline-color: transparent;
-      padding: 15px;
+
+      button {
+        border-radius: 32px;
+        opacity: 0.25;
+        background: #10be65;
+        color: #fff;
+        text-align: center;
+        font-family: DM Sans;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        padding: 15px;
+        cursor: pointer;
+        border: transparent;
+        outline-color: transparent;
+        width: 100%;
+      }
     }
   }
 }
 
 // Responsiveness starts here
 @media (max-width: 1280px) {
-  .sign-up-with-email {
+  .register-artisan {
     form {
       width: 40%;
     }
@@ -114,7 +119,7 @@
 }
 
 @media (max-width: 1024px) {
-  .sign-up-with-email {
+  .register-artisan {
     form {
       width: 50%;
     }
@@ -122,7 +127,7 @@
 }
 
 @media (max-width: 991px) {
-  .sign-up-with-email {
+  .register-artisan {
     form {
       width: 70%;
     }
@@ -130,20 +135,19 @@
 }
 
 @media screen and (max-width: 640px) {
-  .sign-up-with-email {
+  .register-artisan {
     margin-bottom: 0;
-
     form {
       width: 80%;
       padding: 30px;
 
-      .with-email-header {
+      .register-artisan-header {
         h1 {
           font-size: 24px;
         }
       }
-      .with-email-form {
-        .with-email-input {
+      .register-artisan-form {
+        .register-artisan-input {
           label {
             font-size: 13px;
 
@@ -159,8 +163,8 @@
           }
         }
       }
-      .sign-up-button {
-        margin-top: 30px;
+      .register-artisan-button {
+        margin-top: 40px;
         font-size: 14px;
         padding: 12px 0;
       }
