--- a/src/components/Footer/style/Footer.scss
+++ b/src/components/Footer/style/Footer.scss
@@ -33,6 +33,17 @@ footer {
       }
     }
 
+    .mobile-left-footer{
+      a{
+        color: $primary-color;
+        font-family: $main-font;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%; /* 24px */
+      }
+    }
+
     .right-footer {
       nav {
         display: flex;
@@ -66,15 +77,17 @@ footer {
   footer {
     .inner-footer {
       .left-footer {
-        .footer-logo {
-            column-gap: 5px;
-          img {
-            width: 43.923px;
-            height: 30px;
-          }
-          h1{
-            font-size: 15px;
-          }
+        display: none;
+      }
+      .mobile-left-footer{
+        display: block;
+
+        a{
+          font-size: 10px;
+          line-height: normal;
+          color: $primary-color;
+          font-family: $main-font;
+          font-weight: 400;
         }
       }
       .right-footer{
