feat: user overview updated

--- a/src/pages/Admin/components/AdminDashboard/style/AdminDashboardLayout.scss
+++ b/src/pages/Admin/components/AdminDashboard/style/AdminDashboardLayout.scss
@@ -124,7 +124,7 @@
 @media (max-width: 1024px) {
   .admin-dashboard-layout {
     .side-bar {
-      width: 20%;
+      width: fit-content;
     }
   }
 }
