feat: admin dashboard modal updated

--- a/src/pages/Admin/components/AdminDashboard/style/AdminDashboardLayout.scss
+++ b/src/pages/Admin/components/AdminDashboard/style/AdminDashboardLayout.scss
@@ -47,7 +47,9 @@
           line-height: 150%; /* 37.5px */
           transition: all 0.2s ease-in-out;
 
-          &:hover {
+          &:hover,
+          &:focus,
+          &:active {
             font-weight: 700;
             color: #10be65;
           }
@@ -105,7 +107,68 @@
         .desktop-avatar {
           width: 65px;
           height: 65px;
+          cursor: pointer;
           border-radius: 44.375px;
+        }
+      }
+    }
+    .modal {
+      position: absolute;
+      right: 5vw;
+      top: 18vh;
+      width: 25%;
+      height: fit-content;
+      padding: 50px;
+      border-radius: 20px;
+      background: #fff;
+      box-shadow: 0px 1px 16px 3px rgba(56, 172, 255, 0.25);
+
+      .close {
+        text-align: right;
+        button {
+          border: transparent;
+          outline-color: transparent;
+          background-color: #fff;
+          cursor: pointer;
+          img {
+            width: 42px;
+            height: 42px;
+          }
+        }
+      }
+
+      .logout {
+        margin-top: 20px;
+        button {
+          display: flex;
+          align-items: center;
+          column-gap: 10px;
+          border: 1px solid #f2f2f2;
+          outline-color: transparent;
+          background-color: #fff;
+          padding: 10px 20px;
+          cursor: pointer;
+          transition: all 0.3s ease;
+          background: #f2f2f2;
+          border-radius: 22.983px;
+
+          img {
+            width: 24px;
+            height: 24px;
+          }
+
+          p {
+            color: #444;
+            font-family: DM Sans;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+          }
+
+          &:hover {
+            border: 1px solid #444;
+          }
         }
       }
     }
@@ -245,6 +308,42 @@
       padding: 0;
       .dashboard-header {
         display: none;
+      }
+      .modal {
+        top: 8vh;
+        width: 328.373px;
+        padding: 30px;
+      }
+    }
+  }
+}
+
+/* Medium Screens */
+@media (max-width: 640px) {
+  .admin-dashboard-layout {
+    .main-bar {
+      .modal {
+        top: 10vh;
+
+        .close {
+          button {
+            img {
+              width: 24px;
+              height: 24px;
+            }
+          }
+        }
+        .logout {
+          button {
+            img {
+              width: 16px;
+              height: 16px;
+            }
+            p {
+              font-size: 13px;
+            }
+          }
+        }
       }
     }
   }
