--- a/src/pages/RegisterArtisan/style/RegisterArtisan.scss
+++ b/src/pages/RegisterArtisan/style/RegisterArtisan.scss
@@ -16,7 +16,7 @@
       0px 4px 27px 0px rgba(20, 20, 20, 0.02);
     width: 30%;
     padding: 50px;
-    margin: 0 auto;
+    margin: 20px auto;
 
     .register-artisan-header {
       text-align: center;
@@ -106,6 +106,25 @@
         width: 100%;
       }
     }
+
+    .artisan-login {
+      margin-top: 20px;
+      text-align: center;
+
+      p {
+        color: #666666;
+        font-family: Poppins;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+
+        span{
+          color: #10be65;
+          
+        }
+      }
+    }
   }
 }
 
@@ -167,6 +186,13 @@
         margin-top: 40px;
         font-size: 14px;
         padding: 12px 0;
+      }
+
+      .artisan-login{
+        p{
+          font-size: 14px;
+          font-weight: 400;
+        }
       }
     }
   }
