--- a/src/pages/RegisterArtisan/style/RegisterArtisan.scss
+++ b/src/pages/RegisterArtisan/style/RegisterArtisan.scss
@@ -70,7 +70,7 @@
           }
         }
 
-        input {
+        input, textarea {
           border-radius: 12px;
           border: 1px solid rgba(20, 20, 20, 0.2);
           outline-color: rgba(20, 20, 20, 0.2);
@@ -81,6 +81,10 @@
           font-style: normal;
           font-weight: 400;
           line-height: normal;
+        }
+        textarea{
+          resize: none;
+          height: 100px;
         }
       }
     }
@@ -174,7 +178,7 @@
               font-size: 13px;
             }
           }
-          input {
+          input,textarea {
             border-radius: 8.785px;
             border: 0.732px solid rgba(20, 20, 20, 0.2);
             padding: 12px 15px;
