--- a/src/pages/Admin/components/AdminDashboard/components/UserOverview/style/UserOverview.scss
+++ b/src/pages/Admin/components/AdminDashboard/components/UserOverview/style/UserOverview.scss
@@ -1,3 +1,31 @@
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 300px;
+  margin: 0 auto;
+  margin-top: 200px;
+  background-color: #f0f0f0;
+  .loading-container {
+    width: 50px;
+    height: 50px;
+    border: 8px solid #3498db;
+    border-top: 8px solid #fff;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
+
 .user-overview {
   .user-overview-header {
     margin-top: 30px;
@@ -186,14 +214,14 @@
 
 /* Medium Screens */
 @media (max-width: 640px) {
-    .user-overview{
-        .search-box{
-            width: max-content;
-        }
-        .overview-section{
-            .users-section{
-                width: 100%;
-            }
-        }
+  .user-overview {
+    .search-box {
+      width: max-content;
     }
+    .overview-section {
+      .users-section {
+        width: 100%;
+      }
+    }
+  }
 }
