--- a/src/pages/FindArtisan/components/FindArtisanContent/components/Jobs/style/Jobs.scss
+++ b/src/pages/FindArtisan/components/FindArtisanContent/components/Jobs/style/Jobs.scss
@@ -1,3 +1,31 @@
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 300px;
+  margin: 0 auto;
+  margin-top: 200px;
+  background-color: #f0f0f0;
+  .loading-container {
+    width: 50px;
+    height: 50px;
+    border: 8px solid #3498db;
+    border-top: 8px solid #fff;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
+
 .artisan-jobs {
   .artisan-jobs-header {
     display: flex;
