--- a/src/pages/LoginArtisan/style/LoginArtisan.scss
+++ b/src/pages/LoginArtisan/style/LoginArtisan.scss
@@ -1,3 +1,10 @@
+.artisan-login {
+  .login-artisan-go-back {
+    width: 80%;
+    margin: 80px auto;
+  }
+}
+
 .artisan-login-form {
   background-image: url(../images/background.svg);
   background-size: cover;
@@ -18,7 +25,18 @@
 }
 
 @media screen and (max-width: 640px) {
-    h1{
-        font-size: 24px;
+  .artisan-login {
+    .login-artisan-go-back {
+      width: 80%;
+      margin: 30px auto;
     }
+  }
+
+  .artisan-login-form{
+    margin-top: -80px;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
 }
